--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
+    "esbuild": "^0.17.18",
     "kaboom": "^3000.0.0-beta.3"
+  },
+  "scripts": {
+    "build": "esbuild main.js --bundle > build.js"
   }
 }
